add ireland/isle of man data